refactor(im-core): 重构创建群组会话功能并优化相关服务
- 修改 ApiImGroupController 中创建群组会话的返回类型
- 更新 IImConversationService 接口，将创建群组会话的方法返回类型改为 ImGroupBo
- 重构 ImConversationServiceImpl 中的 createGroupConversation 方法，优化群组创建逻辑
- 移除 ImGroupMemberServiceImpl 中的冗余代码
- 删除 ImSyncHandlerImpl 中未使用的 IImConversationRecentService 注入
- 移除 RoomType 枚举类